--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,7 @@
-Welcome to Nick Ng's Site
+{% extends "base.html" %}
+{% block content %}
+<div class="jumbotron">
+  <h1>Welcome to Nick Ng's Site</h1>
+  <p>The personal website for contacting Nick Ng</p>
+</div>
+{% endblock %}
