Add contact create view

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,5 +3,6 @@
 <div class="jumbotron">
   <h1>Welcome to Nick Ng's Site</h1>
   <p>The personal website for contacting Nick Ng</p>
+  <p><a href="{% url 'contact_create' %}" class="btn btn-lg btn-primary">Contact me</a></p>
 </div>
 {% endblock %}
