--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="jumbotron">
-  <h1>Welcome to Nick Ng's Site</h1>
-  <p>The personal website for contacting Nick Ng</p>
+  <h1>Welcome to Nick Ng's Personal Site</h1>
+  <p>Please contact me with any messages you may have for me. I look forward to hearing from you!</p>
   <p><a href="{% url 'contact_create' %}" class="btn btn-lg btn-primary">Contact me</a></p>
 </div>
 {% endblock %}
